Fixed styles' issues of the cart and filters section on mobile devices

--- a/src/styles/_cart-modal.scss
+++ b/src/styles/_cart-modal.scss
@@ -1,6 +1,7 @@
 .cart-modal {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
   background-color: rgba(transparent, .5);
   opacity: 0;
   pointer-events: none;
@@ -200,5 +201,33 @@
   pointer-events: all;
   .cart-modal__window {
     right: 0;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .cart-modal {
+    &__window {
+      max-width: none;
+    }
+
+    &__bottom {
+      border-top: 1px solid #EBEBEB;
+    }
+
+    &__subtotal {
+      padding: 0 0 .5rem;
+      display: flex;
+      align-items: center;
+      p {
+        font-size: 1rem;
+      }
+      h2 {
+        margin-left: .5rem;
+      }
+    }
+
+    &__buttons {
+      margin: .5rem 0 0;
+    }
   }
 }
