--- a/src/styles/_categories.scss
+++ b/src/styles/_categories.scss
@@ -34,9 +34,11 @@
   .categories {
     &__list {
       justify-content: space-evenly;
+      padding-top: .5rem;
+      padding-bottom: .5rem;
     }
     &__option a {
-      padding: .5rem 1rem;
+      padding: .25rem 1rem;
     }
   }
 }
